# LearnOpenGL

./: .gitignore  CMakeLists.txt  README.md
include/: IndexBuffer.h  LoadShader.h  Renderer.h  Texture.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
include/glad/: glad.h
lib/: IndexBuffer.cpp  LoadShader.cpp  Renderer.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  glad.c
src/: CMakeLists.txt  Main.cpp
src/01-Window/: window.cpp
src/02-Create_a_triangle/: Main.cpp
src/02-Triangle/: square.cpp  triangle.cpp
src/03-Shader/: Main.cpp  more.cpp  uniform.cpp
src/04-Textures/: happyContainer.cpp  practice.cpp  texture.cpp
src/05-Math/: learnGlm.cpp
