cmake_minimum_required(VERSION 3.31.0)

project(LearnOpenGL
VERSION 0.0.1
DESCRIPTION "How to Learn OpenGL"
    HOMEPAGE_URL "https://github.com/Sky101223/LearnOpenGL"
    LANGUAGES CXX
)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)

set(INCLUDE_DIR ${CMAKE_SOURCE_DIR}/include)
set(GLFW_INCLUDE_DIR ${CMAKE_SOURCE_DIR}/include/GLFW)
set(GLFW_DLL ${CMAKE_SOURCE_DIR}/lib/glfw3.dll)

add_subdirectory(src)